--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.product {
+    margin: 0 0 20px 0;
+}
+
+body {
+    background: #f7f7f7 !important;
+}
