Add Login Module

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -4,5 +4,8 @@
     <a class="p-2 text-dark" [routerLink]="'products'">Products</a>
   </nav>
   <p class="h5 my-0 me-md-auto fw-normal">NotMyWallet</p>
-  <a class="btn btn-outline-primary" [routerLink]="'register'">Sign up</a>
+  <div>
+    <a class="btn btn-outline-primary" [routerLink]="'login'">Login</a>
+    <a class="btn btn-outline-primary spaced" [routerLink]="'register'">Sign up</a>
+  </div>
 </header>
