--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container mt-3">
+  <div class="row">
     <div class="col-12">
       <div class="card rounded shadow-sm border-0">
         <div class="card-body">
@@ -33,4 +34,5 @@
       </div>
     </div>
   </div>
+</div>
   
