--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,19 +1,32 @@
 
-<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-  <div class="col">
-    <div class="card mb-4 shadow-sm border-0">
-      <div class="card-body">
-        <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-        <ul class="list-unstyled mt-3 mb-4">
-          <li>10 users included</li>
-          <li>2 GB of storage</li>
-          <li>Email support</li>
-          <li>Help center access</li>
-        </ul>
-        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+<ngb-carousel #carousel [interval]="3000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
+  <ng-template ngbSlide *ngFor="let img of images; index as i">
+    <div class="carousel-caption">
+      <h3 style="font-size: 40px;">{{ img.title }}</h3>
+    </div>
+    <div class="picsum-img-wrapper">
+      <img style="height: 500px; width: 100%; object-fit: cover !important;" [src]="img.src" alt="My image {{i + 1}} description">
+    </div>
+  </ng-template>
+</ngb-carousel>
+<div class="d-flex justify-content-between flex-column flex-md-row align-items-center p-3 px-md-4 mb-3">
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 shadow-sm border-0">
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>10 users included</li>
+              <li>2 GB of storage</li>
+              <li>Email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
 
