Add Product Detail View

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -11,45 +11,13 @@
 </ngb-carousel>
 <div class="d-flex justify-content-between flex-column flex-md-row align-items-center p-3 px-md-4 mb-3">
   <div class="container">
-    <div class="row">
-      <h2>Our Bestsellers</h2>
-    </div>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-      <div class="col">
+      <div *ngFor="let product of products" class="col mb-3">
         <div class="card rounded shadow-sm border-0">
           <div class="card-body p-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556485076/shoes-1_gthops.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
-            <h5> <a href="#" class="text-dark">Awesome product</a></h5>
-            <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <ul class="list-inline small">
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card rounded shadow-sm border-0">
-          <div class="card-body p-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556485077/shoes-3_rk25rt.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
-            <h5> <a href="#" class="text-dark">Awesome product</a></h5>
-            <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <ul class="list-inline small">
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-              <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card rounded shadow-sm border-0">
-          <div class="card-body p-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556485077/shoes-3_rk25rt.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
-            <h5> <a href="#" class="text-dark">Awesome product</a></h5>
-            <p class="small text-muted font-italic">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h5> <a [routerLink]="'/products/' + product.id" class="text-dark">{{product.name}}</a></h5>
+            <p class="small text-muted font-italic">{{product.description}}</p>
+            <p class="small text-muted font-italic">{{product.price}},- Euro</p>
             <ul class="list-inline small">
               <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
               <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
