--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,36 @@
 <div class="container mt-3">
-    <p>product works!</p>
+    <div class="card bg-white">
+        <div class="card-body">
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col">
+                    <img src="https://res.cloudinary.com/mhmd/image/upload/v1556485076/shoes-1_gthops.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
+                </div>
+                <div class="col">
+                    <h4>{{ product!.name }}</h4>
+                    <hr>
+                    <h6 class="text-success">{{ product!.price }},- EURO</h6>
+                    <p>{{ product!.description }}</p>
+                    <button class="btn btn-primary">Add to basket</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h5>Ratings</h5>
+                    <hr>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col">
+                        <ul class="list-inline small">
+                        <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
+                        <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
+                        <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
+                        <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
+                        <li class="list-inline-item m-0"><fa-icon class="text-success" [icon]="faStar"></fa-icon><i class="fa fa-star text-success"></i></li>
+                    </ul>
+                    <p>Nice shoe</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
