--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -25,7 +25,7 @@
                             <h6>{{product.name}}</h6>
                             <h6 class="text-success">{{ product!.price }},- EURO</h6>
                             <p>{{product.description}}</p>
-                            <button class="btn btn-primary">Remove from basket</button>
+                            <button class="btn btn-primary" (click)="removeFromShoppingCard(product)">Remove from basket</button>
                         </div>
                         <div class="col-12">
                             <hr>
