--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -9,7 +9,7 @@
                         </div>
                         <div class="d-flex align-items-center">
                             <h6 class="text-success">Total Price: {{totalPrice}},- EURO</h6>
-                            <button class="btn btn-primary ml-3">Order items</button>
+                            <button class="btn btn-primary ml-3" (click)="openOrderModal()">Order items</button>
                         </div>
                     </div>
                     <hr>
