--- a/src/app/product-list/components/sidebar/sidebar.component.html
+++ b/src/app/product-list/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
-
-<div class="navigation list-group bg-white">
-  <a href="#" class="list-group-item list-group-item-action border-0">Cars</a>
-  <a href="#" class="list-group-item list-group-item-action border-0">Clothing</a>
-  <a href="#" class="list-group-item list-group-item-action border-0">Illegal Stuff</a>
-  <a href="#" class="list-group-item list-group-item-action border-0">Other Stoff</a>
+<div *ngIf="categories" class="d-flex flex-md-grow-1 sidebar">
+  <div class="flex-grow-1 list-group list-group-flush bg-white shadow-sm">
+    <div class="list-group-item"><input class="form-control" name="search" [(ngModel)]="searchText" type="text" placeholder="Search for product..." (input)="searchForName()"/></div>
+    <button class="list-group-item list-group-item-action" (click)="filterForCategory(undefined)">All Categories</button>
+    <button *ngFor="let category of categories" class="list-group-item list-group-item-action" (click)="filterForCategory(category)">{{ category.name }}</button>
+  </div>
 </div>
