--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,18 @@
         <div class="card-body">
           <form #loginForm="ngForm">
             <div class="form-group">
+              <label for="name">Name</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><fa-icon [icon]="faUser"></fa-icon></span>
+                </div>
+                <input name="name" #name="ngModel" [(ngModel)]="user.name" type="text" class="form-control" id="name" placeholder="Enter your name" required>
+                <div *ngIf="name.invalid && showErrors" class="invalid-feedback d-flex">
+                  Name is invalid
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <label for="email">Email address</label>
               <div class="input-group">
                 <div class="input-group-prepend">
