--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -18,12 +18,7 @@
             <h5> <a [routerLink]="'/products/' + product.id" class="text-dark">{{product.name}}</a></h5>
             <p class="small text-muted font-italic">{{product.description}}</p>
             <h6 class="text-success">{{product.price}},- Euro</h6>
-            <ng-container *ngIf="getAverageRating(product) | async as averageRating; else noRating">
-              <app-rating [rating]="averageRating"></app-rating>
-            </ng-container>
-            <ng-template #noRating>
-              <app-rating [rating]="0"></app-rating>
-            </ng-template>
+            <app-rating [rating]="product.average_rating"></app-rating>
           </div>
         </div>
       </div>
