--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="d-flex flex-md-row flex-column h-100">
   <div class="d-flex flex-grow-1 flex-md-grow-0">
-    <app-sidebar class="d-flex flex-grow-1 flex-md-grow-0 flex-column" (onCategorySelect)="filterProducts($event)" (onSearchInput)="filterProductsByName($event)"></app-sidebar>
+    <app-sidebar class="d-flex flex-grow-1 flex-md-grow-0 flex-column" (onFilterUpdate)="filterProducts($event!)"></app-sidebar>
   </div>
   <div class="container">
     <div class="justify-content-between align-items-center p-3 px-md-4 mb-3">
@@ -12,12 +12,7 @@
               <h5> <a [routerLink]="'/products/' + product.id" class="text-dark">{{product.name}}</a></h5>
               <p class="small text-muted font-italic">{{product.description}}</p>
               <h6 class="text-success">{{product.price}},- Euro</h6>
-              <ng-container *ngIf="getAverageRating(product) | async as averageRating; else noRating">
-                <app-rating [rating]="averageRating"></app-rating>
-              </ng-container>
-              <ng-template #noRating>
-                <app-rating [rating]="0"></app-rating>
-              </ng-template>
+              <app-rating [rating]="product.average_rating"></app-rating>
             </div>
           </div>
         </div>
