--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div *ngIf="product" class="container mt-3">
     <div class="card bg-white">
         <div class="card-body">
             <div class="row row-cols-1 row-cols-md-2">
@@ -8,7 +8,7 @@
                 <div class="col">
                     <h4>{{ product!.name }}</h4>
                     <hr>
-                    <app-rating [rating]="averageRating"></app-rating>
+                    <app-rating [rating]="product.average_rating"></app-rating>
                     <h6 class="text-success">{{ product!.price }},- EURO</h6>
                     <p>{{ product!.description }}</p>
                     <button *ngIf="user; else loginRequired" class="btn btn-primary" (click)="addToShoppingCard(product!)">Add to basket</button>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="row row-cols-1">
-                <ng-container *ngIf="ratings.length > 0; else noRatings">
+                <ng-container *ngIf="ratings && ratings.length > 0; else noRatings">
                     <div *ngFor="let rating of ratings" class="col">
                         <div class="d-flex">
                             <app-rating [rating]="rating.value"></app-rating>
