Fix Price Issues

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,10 +8,10 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 mb-3 text-center">
         <div *ngFor="let product of products" class="d-flex col mb-3">
           <div class="card rounded shadow-sm border-0 flex-grow-1">
-            <div class="card-body p-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556485076/shoes-1_gthops.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
+            <div class="card-body p-4"><img src="{{ product.image }}" alt="" class="img-fluid d-block mx-auto mb-3">
               <h5> <a [routerLink]="'/products/' + product.id" class="text-dark">{{product.name}}</a></h5>
               <p class="small text-muted font-italic">{{product.description}}</p>
-              <h6 class="text-success">{{product.price}},- Euro</h6>
+              <h6 class="text-success">{{product.price / 100}},- Euro</h6>
               <app-rating [rating]="product.average_rating"></app-rating>
             </div>
           </div>
