--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -12,12 +12,12 @@
 <div class="d-flex justify-content-between flex-column flex-md-row align-items-center p-3 px-md-4 mb-3">
   <div class="container">
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-      <div *ngFor="let product of products" class="col mb-3">
-        <div class="card rounded shadow-sm border-0">
-          <div class="card-body p-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556485076/shoes-1_gthops.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
+      <div *ngFor="let product of products" class="d-flex col mb-3">
+        <div class="card rounded shadow-sm border-0 flex-grow-1">
+          <div class="card-body p-4"><img src="{{ product.image }}" alt="" class="img-fluid d-block mx-auto mb-3">
             <h5> <a [routerLink]="'/products/' + product.id" class="text-dark">{{product.name}}</a></h5>
             <p class="small text-muted font-italic">{{product.description}}</p>
-            <h6 class="text-success">{{product.price}},- Euro</h6>
+            <h6 class="text-success">{{product.price / 100}},- Euro</h6>
             <app-rating [rating]="product.average_rating"></app-rating>
           </div>
         </div>
