--- a/src/app/product-list/components/sidebar/sidebar.component.html
+++ b/src/app/product-list/components/sidebar/sidebar.component.html
@@ -4,11 +4,11 @@
       <input class="form-control" name="search" [(ngModel)]="currentName" type="text" placeholder="Search for product name..." (input)="updateFilter()"/><hr>
       <input class="form-control" name="description" [(ngModel)]="currentDescription" type="text" placeholder="Search for description..." (input)="updateFilter()"/><hr>
       <div class="form-group">
-        <label for="formControlMinPrice">Min Price (Current Value: {{ currentMinPrice }})</label>
+        <label for="formControlMinPrice">Min Price (Current Value: {{ currentMinPrice / 100 }})</label>
         <input type="range" class="form-control-range" [(ngModel)]="currentMinPrice" id="formControlMinPrice" min="1" max="10000" (change)="updateFilter()">
       </div><hr>
       <div class="form-group">
-        <label for="formControlMaxPrice">Max Price (Current Value: {{ currentMaxPrice }})</label>
+        <label for="formControlMaxPrice">Max Price (Current Value: {{ currentMaxPrice / 100 }})</label>
         <input type="range" class="form-control-range" [(ngModel)]="currentMaxPrice" id="formControlMaxPrice" min="1" max="10000" (change)="updateFilter()">
       </div><hr>
       <label for="formControlCategories">Category</label>
