--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -19,7 +19,7 @@
                 <ng-container *ngIf="shoppingCart && shoppingCart!.length > 0; else noProducts">
                     <ng-container *ngFor="let product of shoppingCart">
                         <div class="col-12 col-md-3">
-                            <img src="https://res.cloudinary.com/mhmd/image/upload/v1556485076/shoes-1_gthops.jpg" alt="" class="img-fluid d-block mx-auto mb-3">
+                            <img src="{{product.image}}" alt="" class="img-fluid d-block mx-auto mb-3">
                         </div>
                         <div class="col-12 col-sm-9">
                             <h6>{{product.name}}</h6>
