--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -8,7 +8,7 @@
                             <h5>Shopping Cart</h5>
                         </div>
                         <div class="d-flex align-items-center">
-                            <h6 class="text-success">Total Price: {{totalPrice}},- EURO</h6>
+                            <h6 class="text-success">Total Price: {{totalPrice / 100}},- EURO</h6>
                             <button class="btn btn-primary ml-3" (click)="openOrderModal()">Order items</button>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                         </div>
                         <div class="col-12 col-sm-9">
                             <h6>{{product.name}}</h6>
-                            <h6 class="text-success">{{ product!.price }},- EURO</h6>
+                            <h6 class="text-success">{{ product!.price / 100}},- EURO</h6>
                             <p>{{product.description}}</p>
                             <button class="btn btn-primary" (click)="removeFromShoppingCard(product)">Remove from basket</button>
                         </div>
